# wat-beacon-pub

./: .gitignore  .gitmodules  readme.md
beacon_pub/: CMakeLists.txt  package.xml
beacon_pub/launch/: simple_test.launch
beacon_pub/msg/: beacon.msg
beacon_pub/src/: beacon_repub.cpp
beacon_pub/worlds/: wireless.world
src/: .rosinstall  .rosinstall.bak
src/beacon_pub/: CMakeLists.txt  README.md  package.xml
src/beacon_pub/launch/: simple_test.launch
src/beacon_pub/msg/: beacon.msg
src/beacon_pub/src/: beacon_repub.cpp
src/beacon_pub/worlds/: wireless.world
src/displacement-vector-python-test/: CMakeLists.txt  package.xml
src/displacement-vector-python-test/scripts/: displacement_est.py  trilateration.py  trilateration_example.py
src/hector-quadrotor/src/: .rosinstall
